default/objects/E2EKeysAPI__c/E2EKeysAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Key values for e2e form</description>
    <label>E2EKeysAPI</label>
</CustomObject>