default/objects/E2EKeysAPI__c/fields/AES256_Key__c.field-meta.xml
<CustomField>
    <fullName>AES256_Key__c</fullName>
    <label>AES256_Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>