default/objects/E2EKeysAPI__c/fields/paymentTransactionURL__c.field-meta.xml
<CustomField>
    <fullName>paymentTransactionURL__c</fullName>
    <label>paymentTransactionURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>