default/objects/E2EKeysAPI__c/fields/PSPID__c.field-meta.xml
<CustomField>
    <fullName>PSPID__c</fullName>
    <description>Ingenico PSPID</description>
    <label>PSPID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>