default/objects/E2EKeysAPI__c/fields/SHA_KeyIn__c.field-meta.xml
<CustomField>
    <fullName>SHA_KeyIn__c</fullName>
    <label>SHA_KeyIn</label>
    <length>20</length>
    <type>Text</type>
</CustomField>