default/objects/E2EKeysAPI__c/fields/SHA_KeyOut__c.field-meta.xml
<CustomField>
    <fullName>SHA_KeyOut__c</fullName>
    <label>SHA_KeyOut</label>
    <length>20</length>
    <type>Text</type>
</CustomField>